# coalesced_vs_uncoalesced_bench

./: CMakeLists.txt  README.md  compute_rindex.h  device_info.h  main.cpp  plot.py  quantities.h  run-bench.sh  run_and_time_kernel.h  scale_test.h
jobs/: job-a100.sh  job-h100.sh  job-mi250x  job-mi300a.sh  job-v100.sh
results/: AMD_Instinct_MI250X.txt  AMD_Instinct_MI300A.txt  NVIDIA_A100-SXM4-80GB.txt  NVIDIA_H100_80GB_HBM3.txt  PVC.txt  Tesla_V100-SXM2-32GB.txt
